fix style dark mode to ask product by whatsapp button in css globals dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -160,6 +160,9 @@ footer{
     background-color: #0d1823;
    
   }
+  .ask-product-by-whatsapp{
+    color:  #E5E0FF;
+  }
   footer{
     color: #191919;
   }
